# banjo_riddle_server

./: .gitignore  README.md  pyproject.toml  requirements.txt  riddles.db  run.sh  settings.py
app/: models.py  views.py
app/migrations/: 0001_initial.py
riddle_client/: api.py  view.py
riddles/: helpers.py  model.py  riddles.db  server.py
