[tool.poetry]
name = "banjo-riddle-server"
version = "0.1.0"
description = ""
authors = ["Emma <eqbrown@isf.edu.hk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fuzzywuzzy = "^0.18.0"
django-banjo = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
